<resources>
    <string name="app_name">KabarakMHIS</string>

    <!--    Development Servers-->
    <string name="base_url">http://10.1.57.245:5000/</string>
    <string name="fhir_url">http://41.89.93.172/fhir/</string>


    <!--    Live Servers-->
    <!--    <string name="base_url">https://api.mamashub.co.ke/</string>-->
    <!--    <string name="fhir_url">https://api.mamashub.co.ke/fhir/</string>-->


    <string name="action_submit">Submit</string>
    <string name="action_cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="add_patient">Add Client</string>
    <string name="view"><u>View</u></string>
    <string name="title_patient_list">Registered Clients</string>
    <string-array name="birds">
        <item>Filter By:</item>
        <item>Patient Name</item>
        <item>National Id</item>
        <item>Phone Number</item>
        <item>Mother DoB</item>
    </string-array>
    <string name="query_hint_patient_search">Find by Client Name</string>
    <string name="menu_patient_edit">@string/edit_patient</string>
    <string name="edit_patient">Maternal Profile</string>
    <string name="unknown">UNKNOWN</string>
    <string name="none">none</string>
    <string name="message_no_datetime">No effective DateTime</string>
    <string name="action_new_born">New Born</string>
    <string name="pregnancy_confirmation">Pregnancy Confirmation</string>
    <string name="action_maternity">Maternity Profile</string>
    <string name="patient_property_mobile">Mobile Number</string>
    <string name="patient_property_id">ID Number</string>
    <string name="patient_property_address">Address</string>
    <string name="patient_property_dob">Date of Birth</string>
    <string name="patient_property_gender">Gender</string>
    <string name="header_observation">Observations</string>
    <string name="header_conditions">Conditions</string>
    <string name="cancel_questionnaire_message">Are you sure you want to discard the answers?</string>
    <string name="inputs_missing">Inputs are missing.</string>
    <string name="resources_saved">Record added successfully.</string>
    <string name="dashboard_maternity_icon_label">Patients.</string>
    <string name="action_patient_list">Previous Pregnancy.</string>
    <string name="action_medical">Medical and Surgical History</string>
    <string name="physical_exam">Physical Examination.</string>
    <string name="header_relation">Child/Children</string>
    <string name="header_encounters">Encounters</string>
    <string name="antenatal">Antenatal Profile</string>
    <string name="birth_plan">Birth Plan</string>
    <string name="clinical_notes">Clinical Notes</string>
    <string name="present_pregnancy">Present Pregnancy</string>
    <string name="preventive_services">Tetanus Diphtheria</string>
    <string name="malaria_prophylaxis">Malaria Prophylaxis</string>
    <string name="iron_sup">Was iron supplements issued to the patient</string>
    <string name="patient_suppliment">Supplements Issuing to Patient</string>
    <string name="if_yes_specify_the_drug_given">If yes, specify the drug given</string>
    <string name="benefits">Was benefits of iron and folic acid and counselling done</string>
    <string name="no">No</string>
    <string name="deworming">Was deworming (Mebendazole 500mgs) given once in the 2nd trimester:</string>
    <string name="danger_signs_counselling">Danger signs counselling</string>
    <string name="was_counselling_on_exclusive_breastfeeding_and_benefits_of_colostrum_done">Was counselling on exclusive breastfeeding and benefits of colostrum done</string>
    <string name="facility_to_facility">Facility to facility referrals</string>
    <string name="facility_to_specialist">Facility to specialist referral</string>
    <string name="facility_from_facility">Facility from facility referral</string>
    <string name="clients_records">Clients Records</string>
    <string name="referrals_to_facility">Referrals to Facility</string>
    <string name="add_child">add child</string>
    <string name="child_added_success">add child success</string>
    <string name="child_saved_success">save child success</string>
    <string name="child_saved_failed">save child failed</string>
    <string name="child_deleted_success">delete child success</string>
    <string name="child_deleted_failed">delete child failed</string>
    <string name="child_updated_success">update child success</string>
    <string name="child_updated_failed">update child failed</string>

    <string-array name="array_marital">
        <item>Married</item>
        <item>Widowed</item>
        <item>Single</item>
        <item>Divorced</item>
        <item>Separated</item>
    </string-array>

</resources>