<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/refreshLayout"
    tools:context=".new_designs.NewMainActivity">

    <LinearLayout
        android:layout_margin="10dp"
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="end"
            android:layout_gravity="end"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:text="Register New Client"
                android:id="@+id/btnRegisterPatient"
                android:layout_gravity="end"
                android:gravity="end"
                android:textAllCaps="false"
                app:icon="@drawable/ic_action_add"
                android:layout_height="wrap_content"/>


        </LinearLayout>



        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:orientation="horizontal"
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/clients_records"
                    android:id="@+id/radioBtnClientsRecords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:layout_weight="1"
                    android:text="@string/referrals_to_facility"
                    android:id="@+id/radioBtnReferrals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

            <androidx.appcompat.widget.SearchView
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                app:queryBackground="@android:color/transparent"
                android:background="@drawable/search_round"
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconifiedByDefault="false"
                app:queryHint="@string/query_hint_patient_search" />

        </LinearLayout>

        <include
            android:visibility="gone"
            android:id="@+id/no_record"
            layout="@layout/no_record" />

        <LinearLayout
            android:layout_margin="@dimen/_5dp"
            android:background="@drawable/layout_dotted"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:visibility="gone"
                android:gravity="center"
                android:id="@+id/patient_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0 Patients" />

            <LinearLayout
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:text="#"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textStyle="bold"
                    android:layout_marginStart="15dp"
                    android:text="Client name"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textStyle="bold"
                    android:text="Appointment Date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/patient_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:scrollbars="vertical"
                app:layoutManager="LinearLayoutManager"
                tools:context=".PatientListActivity"
                tools:listitem="@layout/patient_list_item_view" />

        </LinearLayout>

    </LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>