<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/_5dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/progress_bar"
            layout="@layout/progress_bar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_50dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:background="@drawable/layout_dotted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:gravity="center|start"
                            android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/patient_suppliment"/>

                        <TextView
                            android:gravity="center|start"
                            android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/iron_sup"/>

                        <RadioGroup
                            android:id="@+id/radioGrpIronSuppliment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioYesSupplement"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Yes" />

                            <RadioButton
                                android:id="@+id/radioNoSupplement"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="No" />

                        </RadioGroup>

                    </LinearLayout>

                    <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/linearSupplement"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/if_yes_specify_the_drug_given"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                             />

                        <RadioGroup
                            android:id="@+id/radioGrpDrugGvn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioYesDrugGvn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Elemental Iron" />

                            <RadioButton
                                android:id="@+id/radioNoDrugGvn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Combined tablets" />

                        </RadioGroup>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Any other equivalent available"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            />

                        <EditText
                            android:inputType="numberDecimal"
                            android:id="@+id/etOtherDrug"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/edit_outline_trans"
                            android:hint="" />



                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="@dimen/_5dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="First contact before first ANC (12 weeks):"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                             />



                    </LinearLayout>




                </LinearLayout>


            </LinearLayout>






        </ScrollView>

    </LinearLayout>

    <include
        android:id="@+id/navigation"
        layout="@layout/navigation" />



</RelativeLayout>