<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".new_designs.screens.PatientProfile">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_100dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageViewProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/profile"
                app:civ_border_color="#FF000000"
                app:civ_border_width="0dp" />


        </LinearLayout>

        <TableLayout
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow>

                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="Patient Name  "
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:text=":"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Jane Doe"
                    android:textColor="@color/black" />

            </TableRow>
            <TableRow>

                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="ANC ID  "
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:text=":"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />

            </TableRow>
            <TableRow>

                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="Age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:text=":"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Jane Doe"
                    android:textColor="@color/black" />

            </TableRow>



        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/_15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="Next of Kin Details:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            android:layout_margin="10dp"
            app:cardCornerRadius="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvKinDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:padding="@dimen/_15dp"
                    android:text="Patient Number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    app:drawableStartCompat="@drawable/ic_action_call" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>




    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginBottom="@dimen/_15dp"
            android:layout_marginStart="@dimen/_15dp"
            android:textColor="@color/black"
            android:text="Patient Information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.cardview.widget.CardView
                android:id="@+id/findPatientsCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="22dp"
                app:layout_constraintEnd_toStartOf="@+id/cardViewPastPreg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:background="@color/primary"
                    android:id="@+id/rltMedicalHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/imageViewHistory"
                        android:layout_width="@dimen/dashboard_icon_height_width"
                        android:layout_height="@dimen/dashboard_icon_height_width"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="@dimen/dashboard_icon_margin"
                        android:layout_marginTop="@dimen/dashboard_icon_margin"
                        android:layout_marginEnd="@dimen/dashboard_icon_margin"
                        android:layout_marginBottom="@dimen/dashboard_icon_margin"
                        android:contentDescription="@string/action_patient_list"
                        android:src="@drawable/ic_action_history"
                        app:tint="@color/white" />

                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageViewHistory"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dashboard_text_top_margin"
                        android:layout_marginBottom="@dimen/dashboard_text_bottom_margin"
                        android:text="@string/action_medical" />
                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewPastPreg"
                android:layout_width="0dp"
                android:layout_marginEnd="@dimen/_5dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/findPatientsCardView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside">

                <RelativeLayout
                    android:id="@+id/previousPregnancy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/allPatientsButton"
                        android:layout_width="@dimen/dashboard_icon_height_width"
                        android:layout_height="@dimen/dashboard_icon_height_width"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="@dimen/dashboard_icon_margin"
                        android:layout_marginTop="@dimen/dashboard_icon_margin"
                        android:layout_marginEnd="@dimen/dashboard_icon_margin"
                        android:layout_marginBottom="@dimen/dashboard_icon_margin"
                        android:contentDescription="@string/action_patient_list"
                        android:src="@drawable/ic_action_medical_history"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/allPatientsButton"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:layout_marginTop="@dimen/dashboard_text_top_margin"
                        android:layout_marginBottom="@dimen/dashboard_text_bottom_margin"
                        android:text="@string/action_patient_list" />
                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewPhysicalExam"
                android:layout_width="0dp"
                app:layout_constraintEnd_toStartOf="@+id/cardViewHistory"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/findPatientsCardView"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="22dp"
                app:layout_constraintStart_toStartOf="parent">

                <RelativeLayout
                    android:id="@+id/relativeLyt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/imageViewPhysical"
                        android:layout_width="@dimen/dashboard_icon_height_width"
                        android:layout_height="@dimen/dashboard_icon_height_width"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="@dimen/dashboard_icon_margin"
                        android:layout_marginTop="@dimen/dashboard_icon_margin"
                        android:layout_marginEnd="@dimen/dashboard_icon_margin"
                        android:layout_marginBottom="@dimen/dashboard_icon_margin"
                        android:contentDescription="@string/dashboard_maternity_icon_label"
                        android:src="@drawable/ic_action_physical"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/tvPhysicalExam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageViewPhysical"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:layout_marginTop="@dimen/dashboard_text_top_margin"
                        android:layout_marginBottom="@dimen/dashboard_text_bottom_margin"
                        android:text="@string/physical_exam" />
                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewHistory"
                android:layout_width="0dp"
                android:layout_marginEnd="@dimen/_5dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardViewPhysicalExam"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/cardViewPastPreg"
                app:layout_constraintVertical_chainStyle="spread_inside">



            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>



</LinearLayout>